<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/caixa"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="30dp"
        android:inputType="none"
        android:focusable="false"
        />

    <Button
        android:id="@+id/seven"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/caixa"
        android:layout_alignStart="@+id/caixa"
        android:onClick="monta"
        android:tag="7"
        android:text="@string/sete" />
    <Button
        android:id="@+id/eight"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/caixa"
        android:layout_toEndOf="@+id/seven"
        android:text="@string/oito"
        android:onClick="monta"
        android:tag="8"
        android:layout_marginStart="5dp"
        />
    <Button
        android:id="@+id/nine"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/caixa"
        android:layout_toEndOf="@+id/eight"
        android:onClick="monta"
        android:tag="9"
        android:text="@string/nove"
        android:layout_marginStart="5dp"
        />
    <Button
        android:id="@+id/div"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/caixa"
        android:layout_toEndOf="@+id/nine"
        android:text="@string/divisao"
        android:onClick="operator"
        android:tag="/"
        android:layout_marginStart="5dp"
        />
    <Button
        android:id="@+id/limpa"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/caixa"
        android:layout_toEndOf="@+id/div"
        android:text="@string/limpa"
        android:onClick="backspace"
        android:layout_marginStart="5dp"
        />
    <Button
        android:id="@+id/four"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seven"
        android:layout_alignStart="@+id/seven"
        android:onClick="monta"
        android:tag="4"
        android:text="@string/quatro"
        />
    <Button
        android:id="@+id/five"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seven"
        android:layout_toEndOf="@+id/four"
        android:text="@string/cinco"
        android:onClick="monta"
        android:tag="5"
        android:layout_marginStart="5dp"
        />
    <Button
        android:id="@+id/six"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seven"
        android:layout_toEndOf="@+id/five"
        android:text="@string/seis"
        android:onClick="monta"
        android:tag="6"
        android:layout_marginStart="5dp"
        />
    <Button
        android:id="@+id/mult"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seven"
        android:layout_toEndOf="@+id/six"
        android:text="@string/multplicacao"
        android:tag="X"
        android:onClick="operator"
        android:layout_marginStart="5dp"
        />
    <Button
        android:id="@+id/clear"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seven"
        android:layout_toEndOf="@+id/mult"
        android:text="@string/clear"
        android:onClick="clear"
        android:layout_marginStart="5dp"
        />
    <Button
        android:id="@+id/one"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/four"
        android:onClick="monta"
        android:tag="1"
        android:layout_alignStart="@+id/seven"
        android:text="@string/um"
        />
    <Button
        android:id="@+id/two"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/four"
        android:onClick="monta"
        android:layout_toEndOf="@+id/one"
        android:text="@string/dois"
        android:tag="2"
        android:layout_marginStart="5dp"
    />
    <Button
        android:id="@+id/three"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/four"
        android:layout_toEndOf="@+id/two"
        android:text="@string/tres"
        android:onClick="monta"
        android:tag="3"
        android:layout_marginStart="5dp"
        />
    <Button
        android:id="@+id/sub"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/four"
        android:layout_toEndOf="@+id/three"
        android:text="@string/subt"
        android:tag="-"
        android:onClick="operator"
        android:layout_marginStart="5dp"
        />
    <Button
        android:id="@+id/zero"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/one"
        android:layout_alignStart="@+id/one"
        android:onClick="monta"
        android:tag="0"
        android:text="@string/zero"
        />
    <Button
        android:id="@+id/ponto"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/one"
        android:layout_toEndOf="@+id/zero"
        android:text="@string/ponto"
        android:tag="."
        android:onClick="ponto"
        android:layout_marginStart="5dp"
        />
    <Button
        android:id="@+id/sum"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/one"
        android:layout_toEndOf="@+id/ponto"
        android:text="@string/soma"
        android:tag="+"
        android:onClick="operator"
        android:layout_marginStart="5dp"
        />
    <Button
        android:id="@+id/equal"
        android:layout_width="54dp"
        android:layout_height="100dp"
        android:layout_below="@+id/clear"
        android:layout_toEndOf="@+id/sub"
        android:text="@string/igual"
        android:onClick="equal"
        android:tag="="
        android:layout_marginStart="5dp"
        />
</RelativeLayout>